--- a/src/pages/docs/align-content.mdx
+++ b/src/pages/docs/align-content.mdx
@@ -35,7 +35,7 @@ Use `content-start` to pack rows in a container against the start of the cross a
   </div>
 </template>
 
-<div class="flex **content-start**">
+<div class="flex **content-start** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -69,7 +69,7 @@ Use `content-center` to pack rows in a container in the center of the cross axis
   </div>
 </template>
 
-<div class="flex **content-center**">
+<div class="flex **content-center** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -103,7 +103,7 @@ Use `content-end` to pack rows in a container against the end of the cross axis:
   </div>
 </template>
 
-<div class="flex **content-end**">
+<div class="flex **content-end** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -137,7 +137,7 @@ Use `content-between` to distribute rows in a container such that there is an eq
   </div>
 </template>
 
-<div class="flex **content-between**">
+<div class="flex **content-between** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -171,7 +171,7 @@ Use `content-around` to distribute rows in a container such that there is an equ
   </div>
 </template>
 
-<div class="flex **content-around**">
+<div class="flex **content-around** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
