fixing table in container (extra row span due to 2xl breakpoint

--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -22,11 +22,11 @@ export const classes = (
     </thead>
     <tbody className="align-baseline">
       <tr>
-        <td rowSpan={5} className="p-2 border-t border-gray-300 font-mono text-xs text-purple-700">
+        <td rowSpan={6} className="p-2 border-t border-gray-300 font-mono text-xs text-purple-700">
           .container
         </td>
         <td className="p-2 border-t border-gray-300 font-mono text-xs text-gray-600">
-          <span className="font-sans italic font-sans">None</span>
+          <span className="font-sans italic">None</span>
         </td>
         <td className="p-2 border-t border-gray-300 font-mono text-xs text-blue-700">
           width: 100%;
