--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -15,29 +15,35 @@ export const classes = (
     </colgroup>
     <thead>
       <tr>
-        <th className="text-sm font-semibold text-gray-700 p-2 bg-gray-100">Class</th>
-        <th className="text-sm font-semibold text-gray-700 p-2 bg-gray-100">Breakpoint</th>
-        <th className="text-sm font-semibold text-gray-700 p-2 bg-gray-100">Properties</th>
+        <th className="z-20 sticky top-0 text-sm font-semibold text-gray-600 bg-white p-0">
+          <div className="pb-2 border-b border-gray-200">Class</div>
+        </th>
+        <th className="z-20 sticky top-0 text-sm font-semibold text-gray-600 bg-white p-0">
+          <div className="pb-2 border-b border-gray-200">Breakpoint</div>
+        </th>
+        <th className="z-20 sticky top-0 text-sm font-semibold text-gray-600 bg-white p-0">
+          <div className="pb-2 border-b border-gray-200">Properties</div>
+        </th>
       </tr>
     </thead>
     <tbody className="align-baseline">
       <tr>
-        <td rowSpan={6} className="p-2 border-t border-gray-300 font-mono text-xs text-purple-700">
+        <td rowSpan={6} className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap">
           .container
         </td>
-        <td className="p-2 border-t border-gray-300 font-mono text-xs text-gray-600">
-          <span className="font-sans italic">None</span>
+        <td className="py-2 text-xs italic">
+          None
         </td>
-        <td className="p-2 border-t border-gray-300 font-mono text-xs text-blue-700">
+        <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre">
           width: 100%;
         </td>
       </tr>
       {Object.keys(screens).map((screen) => (
         <tr key={screen}>
-          <td className="p-2 border-t border-gray-300 font-mono text-xs text-gray-700">
-            {screen} <span className="text-gray-600 font-sans italic">({screens[screen]})</span>
+          <td className="py-2 border-t border-gray-200 font-mono text-xs">
+            {screen} <span className="font-sans italic">({screens[screen]})</span>
           </td>
-          <td className="p-2 border-t border-gray-300 font-mono text-xs text-blue-700">
+          <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre border-t border-gray-200">
             max-width: {screens[screen]};
           </td>
         </tr>
