--- a/src/pages/docs/animation.mdx
+++ b/src/pages/docs/animation.mdx
@@ -13,28 +13,28 @@ export const classes = (
     <table className="w-full text-left table-collapse">
       <thead>
         <tr>
-          <th className="text-sm font-semibold text-gray-700 p-2 bg-gray-100">
-            Class
+          <th className="z-20 sticky top-0 text-sm font-semibold text-gray-600 bg-white p-0">
+            <div className="pb-2 border-b border-gray-200">Class</div>
           </th>
-          <th className="text-sm font-semibold text-gray-700 p-2 bg-gray-100">
-            Properties
+          <th className="z-20 sticky top-0 text-sm font-semibold text-gray-600 bg-white p-0">
+            <div className="pb-2 border-b border-gray-200">Properties</div>
           </th>
         </tr>
       </thead>
       <tbody className="align-baseline">
         <tr>
-          <td className="p-2 border-t border-gray-300 font-mono text-xs text-purple-700 whitespace-nowrap">
+          <td className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap">
             .animate-none
           </td>
-          <td className="p-2 border-t border-gray-300 font-mono text-xs text-blue-700 whitespace-pre">
+          <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre">
             animation: none;
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
+          <td className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap border-t border-gray-200">
             .animate-spin
           </td>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
+          <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre border-t border-gray-200">
             {redent(`
               animation: spin 1s linear infinite;\n
               @keyframes spin {
@@ -49,10 +49,10 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
+          <td className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap border-t border-gray-200">
             .animate-ping
           </td>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
+          <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre border-t border-gray-200">
             {redent(`
               animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;\n
               @keyframes ping {
@@ -69,10 +69,10 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
+          <td className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap border-t border-gray-200">
             .animate-pulse
           </td>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
+          <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre border-t border-gray-200">
             {redent(`
               animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;\n
               @keyframes pulse {
@@ -87,10 +87,10 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
+          <td className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap border-t border-gray-200">
             .animate-bounce
           </td>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
+          <td className="py-2 font-mono text-xs text-light-blue-600 whitespace-pre border-t border-gray-200">
             {redent(`
               animation: bounce 1s infinite;\n
               @keyframes bounce {
