remove property filters from class tables

--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -8,10 +8,7 @@ import plugin from 'tailwindcss/lib/plugins/gap'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
 
-export const classes = {
-  plugin,
-  filterProperties: (property) => !property.startsWith('grid-'),
-}
+export const classes = { plugin }
 
 ## Gap
 
