--- a/src/pages/docs/placeholder-color.mdx
+++ b/src/pages/docs/placeholder-color.mdx
@@ -20,7 +20,7 @@ export const classes = {
   ),
   preview: (css, { className }) => (
     <td
-      className={`w-16 font-medium text-base whitespace-nowrap ${className}`}
+      className={`w-16 font-medium text-base whitespace-nowrap align-middle ${className}`}
       style={{
         color: Array.isArray(css['color']) ? css['color'][0] : css['color'],
       }}
