fix release notes dates spacing and weight

--- a/src/pages/docs/release-notes.mdx
+++ b/src/pages/docs/release-notes.mdx
@@ -7,7 +7,7 @@ import { ColorPalette } from '@/components/ColorPalette'
 
 ## Tailwind CSS v1.9
 
-<div className="-mt-4 text-gray-600">Oct 12, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Oct 12, 2020</div>
 
 Tailwind CSS v1.9 is now available with a new `presets` feature, some new utilities, and a few accessibility improvements. Check it out!
 
@@ -36,7 +36,7 @@ Tailwind CSS v1.9 is now available with a new `presets` feature, some new utilit
 
 ## Tailwind CSS v1.8
 
-<div className="-mt-4 text-gray-600">Sep 4, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Sep 4, 2020</div>
 
 Tailwind CSS v1.8 is now available with a handful of new utilities, a couple new features, and an exciting new experiment!
 
@@ -63,7 +63,7 @@ Check out the [full release notes on GitHub](https://github.com/tailwindlabs/tai
 
 ## Tailwind CSS v1.7
 
-<div className="-mt-4 text-gray-600">Aug 18, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Aug 18, 2020</div>
 
 Tailwind CSS v1.7 is now available with gradients, background-clip support, a new experimental version of `@apply` that works with any class (!), and tons more:
 
@@ -96,7 +96,7 @@ For all the details, [check out the complete release notes on GitHub](https://gi
 
 ## Tailwind CSS v1.6
 
-<div className="-mt-4 text-gray-600">July 28, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>July 28, 2020</div>
 
 Tailwind CSS v1.6 is now available with animation support (!) and a bunch of other neat stuff:
 
@@ -111,7 +111,7 @@ For all the details, [check out the complete release notes on GitHub](https://gi
 
 ## Tailwind CSS v1.5
 
-<div className="-mt-4 text-gray-600">July 15, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>July 15, 2020</div>
 
 Tailwind CSS v1.5 is now available with a handful of useful new features:
 
@@ -126,7 +126,7 @@ For the full list of changes, [check out the complete release notes on GitHub](h
 
 ## Tailwind CSS v1.4
 
-<div className="-mt-4 text-gray-600">Apr 29, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Apr 29, 2020</div>
 
 Tailwind CSS v1.4 is out now with a couple of major new features:
 
@@ -140,7 +140,7 @@ For the full list of changes, [check out the complete release notes on GitHub](h
 
 ## Tailwind CSS v1.3
 
-<div className="-mt-4 text-gray-600">Apr 21, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Apr 21, 2020</div>
 
 Tailwind CSS v1.3 is now available with a bunch of super useful new features, including:
 
@@ -155,7 +155,7 @@ For the full list of changes, [check out the complete release notes on GitHub](h
 
 ## Tailwind CSS v1.2
 
-<div className="-mt-4 text-gray-600">Feb 5, 2020</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Feb 5, 2020</div>
 
 Tailwind CSS v1.2 is here and it's the biggest feature release since v0.1 dropped two and a half years ago!
 
@@ -171,7 +171,7 @@ For the full list of changes, [check out the complete release notes on GitHub](h
 
 ## Tailwind CSS v1.1
 
-<div className="-mt-4 text-gray-600">Aug 6, 2019</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>Aug 6, 2019</div>
 
 The first new feature release since v1.0 has arrived! Tailwind v1.1 includes a bunch of new stuff, but I think the things you'll probably be most excited about are:
 
@@ -189,7 +189,7 @@ Be sure to read through the [fixes](https://github.com/tailwindlabs/tailwindcss/
 
 ## Tailwind CSS v1.0
 
-<div className="-mt-4 text-gray-600">May 13, 2019</div>
+<div className="font-medium" style={{ marginTop: '-1.5rem' }}>May 13, 2019</div>
 
 A year and a half in the making, the first stable release of Tailwind CSS is finally here! 🎉
 
