--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -11,32 +11,40 @@ By default, Tailwind will look for an optional `tailwind.config.js` file at the 
 
 ```js
 // Example `tailwind.config.js` file
+const colors = require('tailwindcss/colors')
 
 module.exports = {
-  important: true,
-  presets: [],
   theme: {
+    colors: {
+      gray: colors.coolGray,
+      blue: colors.lightBlue,
+      red: colors.rose,
+      pink: colors.fuchsia,
+    },
     fontFamily: {
-      display: ['Gilroy', 'sans-serif'],
-      body: ['Graphik', 'sans-serif'],
+      sans: ['Graphik', 'sans-serif'],
+      serif: ['Merriweather', 'serif'],
     },
     extend: {
-      colors: {
-        cyan: '#9cdbff',
-      },
-      margin: {
-        '96': '24rem',
+      spacing: {
         '128': '32rem',
+        '144': '36rem',
       },
+      borderRadius: {
+        '4xl': '2rem',
+      }
     }
   },
   variants: {
-    opacity: ['responsive', 'hover']
+    extend: {
+      borderColor: ['focus-visible'],
+      opacity: ['disabled'],
+    }
   }
 }
 ```
 
-Every section of the config file is optional, so you only have to specify what you'd like to change. Any missing sections will fall back to Tailwind's [default configuration](https://github.com/tailwindlabs/tailwindcss/blob/v1/stubs/defaultConfig.stub.js).
+Every section of the config file is optional, so you only have to specify what you'd like to change. Any missing sections will fall back to Tailwind's [default configuration](https://github.com/tailwindlabs/tailwindcss/blob/master/stubs/defaultConfig.stub.js).
 
 ## Creating your configuration file
 
@@ -51,30 +59,15 @@ This will create a minimal `tailwind.config.js` file at the root of your project
 ```js
 // tailwind.config.js
 module.exports = {
-  future: {},
   purge: [],
+  darkMode: false, // or 'media' or 'class'
   theme: {
     extend: {},
   },
-  variants: {},
+  variants: {
+    extend: {},
+  },
   plugins: [],
-}
-```
-
-Presets can also be defined as a function so that you can passthrough configuration if your preset requires that.
-
-```js
-module.exports = {
-  // ...
-  presets: [
-    // Require it with no options
-    require('@acmecorp/tailwind-base'),
-
-    // Invoke it and pass options to your own options API
-    require('@acmecorp/tailwind-base')({
-      colorPalette: 'legacy',
-    })
-  ]
 }
 ```
 
@@ -92,7 +85,7 @@ If you use a custom file name, you will need to specify it when including Tailwi
 // postcss.config.js
 module.exports = {
   plugins: [
-    require('tailwindcss')('./tailwindcss-config.js'),
+    tailwindcss: { config: './tailwindcss-config.js' },
   ],
 }
 ```
@@ -107,54 +100,33 @@ If you'd rather scaffold a complete configuration file that includes all of Tail
 npx tailwindcss init --full
 ```
 
-You'll get a file that matches the [default configuration file](https://github.com/tailwindlabs/tailwindcss/blob/v1/stubs/defaultConfig.stub.js) Tailwind uses internally.
-
-## Presets
-
-The `presets` section is where you can include other configurations, this is useful if you have some configuration abstracted for your company. We have a [YouTube video](https://www.youtube.com/watch?v=AaZhspn7-MM) on this very subject.
-
-The presets can be an array, if you don't have any presets defined, then you will inherit the default theme. If you have one or more presets defined then the default configuration will not be included. Each preset can also have its own presets.
-
-
-```js
-// tailwind.config.js
-module.exports = {
-  presets: []
-}
-```
+You'll get a file that matches the [default configuration file](https://unpkg.com/browse/tailwindcss@latest/stubs/defaultConfig.stub.js) Tailwind uses internally.
 
 ## Theme
 
-The `theme` section is where you define your color palette, font stacks, type scale, border sizes, breakpoints — anything related to the visual design of your site.
+The `theme` section is where you define your color palette, fonts, type scale, border sizes, breakpoints — anything related to the visual design of your site.
 
 ```js
 // tailwind.config.js
 module.exports = {
   theme: {
-    screens: {
-      sm: '640px',
-      md: '768px',
-      lg: '1024px',
-      xl: '1280px',
-      '2xl': '1536px',
+    colors: {
+      gray: colors.coolGray,
+      blue: colors.lightBlue,
+      red: colors.rose,
+      pink: colors.fuchsia,
     },
     fontFamily: {
-      display: ['Gilroy', 'sans-serif'],
-      body: ['Graphik', 'sans-serif'],
-    },
-    borderWidth: {
-      DEFAULT: '1px',
-      '0': '0',
-      '2': '2px',
-      '4': '4px',
+      sans: ['Graphik', 'sans-serif'],
+      serif: ['Merriweather', 'serif'],
     },
     extend: {
-      colors: {
-        cyan: '#9cdbff',
-      },
       spacing: {
-        '96': '24rem',
         '128': '32rem',
+        '144': '36rem',
+      },
+      borderRadius: {
+        '4xl': '2rem',
       }
     }
   }
@@ -171,9 +143,11 @@ The `variants` section lets you control which [variants](/docs/hover-focus-and-o
 // tailwind.config.js
 module.exports = {
   variants: {
-    appearance: ['responsive'],
-    backgroundColor: ['responsive', 'hover', 'focus'],
     fill: [],
+    extend: {
+      borderColor: ['focus-visible'],
+      opacity: ['disabled'],
+    }
   },
 }
 ```
@@ -182,20 +156,42 @@ Learn more in the [variants configuration guide](/docs/configuring-variants).
 
 ## Plugins
 
-The `plugins` section allows you to register third-party plugins with Tailwind that can be used to generate extra utilities, components, base styles, or custom variants.
+The `plugins` section allows you to register plugins with Tailwind that can be used to generate extra utilities, components, base styles, or custom variants.
 
 ```js
 // tailwind.config.js
 module.exports = {
   plugins: [
-    require('tailwindcss-transforms'),
-    require('tailwindcss-transitions'),
-    require('tailwindcss-border-gradients'),
+    require('@tailwindcss/forms'),
+    require('@tailwindcss/aspect-ratio'),
+    require('@tailwindcss/typography'),
+    require('tailwindcss-children'),
   ],
 }
 ```
 
 Learn more about writing your own plugins in the [plugin authoring guide](/docs/plugins).
+
+## Presets
+
+The `presets` section allows you to specify your own custom base configuration instead of using Tailwind's default base configuration.
+
+```js
+// tailwind.config.js
+module.exports = {
+  presets: [
+    require('@acmecorp/base-tailwind-config')
+  ],
+
+  // Project-specific customizations
+  theme: {
+    //...
+  },
+  // ...
+}
+```
+
+Learn more about presets in the [presets documentation](/docs/presets).
 
 ## Prefix
 
@@ -210,7 +206,7 @@ module.exports = {
 }
 ```
 
-Now every utility will be generated with the configured prefix:
+Now every class will be generated with the configured prefix:
 
 ```css
 .tw-text-left {
@@ -225,12 +221,10 @@ Now every utility will be generated with the configured prefix:
 /* etc. */
 ```
 
-It's important to understand that this prefix is added to the beginning of each *utility* name, not to the entire class name.
-
-That means that classes with responsive or state prefixes like `sm:` or `hover:` will still have the responsive or state prefix *first*, with your custom prefix appearing after the colon:
+It's important to understand that this prefix is added _after_ any variant prefixes. That means that classes with responsive or state prefixes like `sm:` or `hover:` will still have the responsive or state prefix *first*, with your custom prefix appearing after the colon:
 
 ```html
-<div class="tw-text-lg md:tw-text-xl tw-bg-red-500 hover:tw-bg-blue-500">
+<div class="tw-text-lg md:tw-text-xl tw-bg-red-500 **hover:tw-bg-blue-500**">
   <!-- -->
 </div>
 ```
@@ -240,7 +234,7 @@ Prefixes are only added to classes generated by Tailwind; **no prefix will be ad
 That means if you add your own responsive utility like this:
 
 ```css
-@responsive {
+@variants hover {
   .bg-brand-gradient { /* ... */ }
 }
 ```
@@ -249,24 +243,13 @@ That means if you add your own responsive utility like this:
 
 ```css
 .bg-brand-gradient { /* ... */ }
-@media (min-width: 640px) {
-  .sm\:bg-brand-gradient { /* ... */ }
-}
-@media (min-width: 768px) {
-  .md\:bg-brand-gradient { /* ... */ }
-}
-@media (min-width: 992) {
-  .lg\:bg-brand-gradient { /* ... */ }
-}
-@media (min-width: 1280px) {
-  .xl\:bg-brand-gradient { /* ... */ }
-}
+.hover\:bg-brand-gradient:hover { /* ... */ }
 ```
 
 If you'd like to prefix your own utilities as well, just add the prefix to the class definition:
 
 ```css
-@responsive {
+@variants hover {
   .tw-bg-brand-gradient { /* ... */ }
 }
 ```
@@ -311,9 +294,11 @@ If you'd like to make your own utilities `!important`, just add `!important` to 
 }
 ```
 
-Setting `important` to `true` is useful, but can introduce some issues when incorporating third-party JS libraries that add inline styles to your elements—in those cases, Tailwind's `!important` utilities defeat the inline styles. This is really common with animation libraries, for example.
+### Selector strategy
 
-If you're _not_ facing that issue, feel free to skip to the next section! But if you _are_ facing that issue, you can make utilities "important" in a less aggressive manner by providing a _CSS selector_ instead of a boolean to the `important` option:
+Setting `important` to `true` can introduce some issues when incorporating third-party JS libraries that add inline styles to your elements. In those cases, Tailwind's `!important` utilities defeat the inline styles, which can break your intended design.
+
+To get around this, you can set `important` to an ID selector like `#app` instead:
 
 ```js
 // tailwind.config.js
@@ -372,7 +357,9 @@ If you don't provide any `corePlugins` configuration, all core plugins will be e
 
 ```js
 // tailwind.config.js
-module.exports = {}
+module.exports = {
+  // ...
+}
 ```
 
 If you'd like to disable specific core plugins, provide an object for `corePlugins` that sets those plugins to `false`:
@@ -388,7 +375,7 @@ module.exports = {
 }
 ```
 
-If you'd like to whitelist which core plugins should be enabled, provide an array that includes a list of the core plugins you'd like to use:
+If you'd like to safelist which core plugins should be enabled, provide an array that includes a list of the core plugins you'd like to use:
 
 ```js
 // tailwind.config.js
@@ -437,3 +424,5 @@ fullConfig.theme.screens.md
 fullConfig.theme.boxShadow['2xl']
 // => '0 25px 50px -12px rgba(0, 0, 0, 0.25)'
 ```
+
+Note that this will transitively pull in a lot of our build-time dependencies, resulting in bigger bundle client-size size. To avoid this, we recommend using a tool like [babel-plugin-preval](https://github.com/kentcdodds/babel-plugin-preval) to generate a static version of your configuration at build-time.
